--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+//For git testing
 allprojects {
     repositories {
         google()
